--- a/finalpage.html
+++ b/finalpage.html
@@ -24,6 +24,11 @@
   transition: opacity 1s ease-in-out; /* Smooth fade effect */
 }
 
+#image:hover {
+   height: 70vh;
+   cursor: grab;
+}
+
   </style>
 
 </head>
