--- a/mostfinal.html
+++ b/mostfinal.html
@@ -72,7 +72,7 @@
       </div>
       
       <div id="uleyaMessage" style="display: none; text-align: center;">
-        <div class="my-4 text-4xl font-bold"></div>
+        <div class="my-4 text-4xl font-bold">AMAZON GIFT CARD</div>
       </div>
 
   <script>
